--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "zr/zr-cb-cta",
     "description": "ZR Call To Action - Layout Builder",
-    "type": "drupal-custom-recipe",
+    "type": "drupal-recipe",
     "require": {
         "php": ">=8.1",
         "drupal/linkit": "^7.0"
