--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "drupal-recipe",
     "require": {
         "php": ">=8.1",
-        "drupal/linkit": "^7.0"
+        "drupal/linkit": "^7.0",
+        "zr/zr-layout-builder-bundle": "^1.0"
     },
     "authors": [
         {
